# MindCraft

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  TODO.md  package-lock.json  package.json
backend/: .env.example  manage.py  pyproject.toml
backend/mindcraft/: asgi.py  settings.py  urls.py  wsgi.py
backend/mindcraft/ai_service/: client.py  generators.py  prompts.py  research.py  safety.py
backend/mindcraft/chat/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/mindcraft/chat/migrations/: 0001_initial.py  0002_initial.py  0003_alter_chatsession_context_type.py
backend/mindcraft/content/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/mindcraft/content/migrations/: 0001_initial.py  0002_initial.py  0003_researchsession_researchfinding_mediaresource.py  0004_curriculumplan_curriculumlesson.py
backend/mindcraft/core/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/mindcraft/core/migrations/: 0001_initial.py
backend/mindcraft/journal/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/mindcraft/journal/migrations/: 0001_initial.py
backend/mindcraft/math/: admin.py  apps.py  models.py  openai_client.py  serializers.py  urls.py  views.py
backend/mindcraft/math/migrations/: 0001_initial.py
backend/mindcraft/progress/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/mindcraft/progress/migrations/: 0001_initial.py  (+1 more)
backend/mindcraft/quiz/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
(+50 files in other folders)
